new protocol handler code
Signed-off-by: hrishikesh-nalawade <hrishikesh.nalawade.17@gmail.com>